--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
-    "shadcn": "shadcn"
+    "shadcn": "shadcn",
+    "db:generate": "dotenv -e .env.development -- prisma generate",
+    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "db:push": "dotenv -e .env.development -- prisma db push",
+    "db:studio": "dotenv -e .env.development -- prisma studio",
+    "db:seed": "dotenv -e .env.development -- prisma db seed",
+    "db:migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
+    "@prisma/client": "^6.17.1",
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "^10.1.8",
@@ -35,6 +44,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-multiline-arrays": "^4.0.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.17.1",
     "shadcn": "^2.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
