--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "15.5.4",
+    "pino": "^10.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
@@ -42,6 +43,7 @@
     "eslint-config-prettier": "^10.1.8",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.4",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "prettier-plugin-multiline-arrays": "^4.0.3",
     "prettier-plugin-tailwindcss": "^0.6.14",
