Install better-auth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       }
     ],
     "paths": {
+      "@generated/*": [
+        "./generated/*"
+      ],
       "@/components/*": [
         "./src/components/*"
       ],
