--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@shadcn/ui": "^0.0.4",
+    "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
@@ -32,6 +33,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.3.28",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
