--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.0",
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "^6.18.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@shadcn/ui": "^0.0.4",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
