Configure shadcn/ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
       "@generated/*": [
         "./generated/*"
       ],
-      "@/components/*": [
-        "./src/components/*"
+      "@/ui/*": [
+        "./src/ui/*"
       ],
       "@/libs/*": [
         "./src/libs/_assembly/*",
