--- a/components.json
+++ b/components.json
@@ -4,17 +4,19 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "",
-    "css": "src/app/globals.css",
+    "config": "tailwind.config.ts",
+    "css": "src/app/(layout)/globals.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "ui": "@/libs/ui",
-    "utils": "@/libs/ui/utils"
+    "components": "@/ui/*",
+    "ui": "@/ui/*",
+    "utils": "@/ui/utils"
   },
-  "registries": {}
+  "registries": {
+    "@acme": "https://acme.com/r/{name}.json"
+  }
 }
