--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
@@ -31,7 +32,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.3.28",
