--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky",
     "shadcn": "shadcn",
     "db:generate": "dotenv -e .env.development -- prisma generate",
-    "db:migrate:dev": "dotenv -e .env.development -- prisma migrate dev",
+    "db:migrate": "dotenv -e .env.development -- prisma migrate dev",
+    "db:reset": "dotenv -e .env.development -- prisma migrate reset",
     "db:push": "dotenv -e .env.development -- prisma db push",
     "db:studio": "dotenv -e .env.development -- prisma studio",
     "db:seed": "dotenv -e .env.development -- prisma db seed",
