--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@faker-js/faker": "^10.1.0",
     "@prisma/client": "^6.18.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "better-auth": "^1.3.28",
