--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "19.1.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@better-auth/cli": "^1.3.28",
