--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "pino": "^10.1.0",
     "react": "19.2.0",
