--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "server-only": "^0.0.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.12"
   },
